# PDF-QA-System

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: main.py
backend/api/: __init__.py  files.py  qa.py  router.py
backend/core/: __init__.py  config.py  dependency.py
backend/data/: __init__.py  dataloader.py
backend/models/: api_models.py
backend/services/: __init__.py  dataloader.py  file_processor.py  qa_service.py  upload_service.py  vector_store_service.py
backend/services/interface/: __init__.py  dataloader.py  file_processor.py  qa.py  upload.py  vector_store.py
backend/system_prompts/: __init__.py  prompt_v1.py
backend/utils/: groq_client.py  logging_config.py  ollama_client.py
frontend/: package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MarkdownMessage.tsx
src/: api.py  ui.py
src/utils/: dataloader.py  datastore.py  file_processor.py  logging_config.py  retriever.py
