[project]
name = "pdf-qa-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.116.1",
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-core>=0.3.80",
    "langchain-groq==0.3.6",
    "langchain-text-splitters>=0.3.11",
    "pip>=25.3",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "sentence-transformers==5.0.0",
]
